mm related, and scorer experimenting

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,8 @@ optuna-fast-fanova       # Recommended Optuna dependency
 Pillow                   # Image processing
 clip                     # Original OpenAI CLIP (might be pulled by others)
 open_clip_torch          # Alternative CLIP implementation (often preferred)
-transformers             # Hugging Face library (used by many scorers like BLIP, CLIP)
+transformers>=4.66.1     # Hugging Face library (used by many scorers like BLIP, CLIP)
+tqdm>=4.66.2             # mecha compat
 # openai-clip            # Usually redundant if 'clip' or 'open_clip_torch' is present
 # aesthetic-predictor-v2-5 # Pulled via pip install aesthetic-predictor-v2-5 directly
 hpsv2                    # Pulled via pip install hpsv2 directly
