--- a/conf/webui_presets/comfy.yaml
+++ b/conf/webui_presets/comfy.yaml
@@ -1,9 +1,3 @@
-defaults:
-  - cargo:
-    - payload1
-    - payload2
-    - ...
-
 score_weight: 1.0
 
 prompt: ""
@@ -12,11 +6,11 @@ negative_prompt: ""
 n_iter: 1
 batch_size: 1
 steps: 20
-cfg_scale: 7
+cfg_scale: 8
 width: 512
 height: 512
-sampler_name: Euler
-sampler_index: Euler
+sampler_name: Euler a
+sampler_index: Euler a
 
 seed: -1
 subseed: -1
@@ -25,11 +19,11 @@ seed_resize_from_h: -1
 seed_resize_from_w: -1
 
 enable_hr: false
-denoising_strength: 0
+denoising_strength: 0.45
 firstphase_width: 0
 firstphase_height: 0
 hr_scale: 2
-hr_upscaler: ""
+hr_upscaler: "4x_fatal_Anime_500000_G"
 hr_second_pass_steps: 0
 hr_resize_x: 0
 hr_resize_y: 0
