--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "js-yaml": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.5.1",
     "react-hook-form": "^7.57.0"
   },
   "scripts": {
